9-TargetGroup.tf
resource "aws_lb_target_group" "ASG01-TG01" {
  name        = "ASG01-TG01"
  target_type = "instance"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.ASG01-vpc.id

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "ASG01-TG01"
  }
}

resource "aws_lb_target_group" "ASG01-TG02" {
  name        = "ASG01-TG02"
  target_type = "instance"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.ASG01-vpc.id

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "ASG01-TG02"
  }
}
